app/css/style.css
/* ... */
.list-profile {
    padding-left: 10px;
    padding-right: 10px;
}

.list-profile .item {
    border: none;
    padding-top: 10px;
    padding-bottom: 10px;
}
.list-profile input {
    font-size:18px;

}
.list-profile .item i {
    color:#b2b2b2;
    font-size: 24px;
    font-weight: bolder;
}
.edit_info_img
{
    border-radius: 50% 50%;
    height: 150px;
    width: 150px;
    background-size: 100% 100%;
    margin: 20px auto 0px auto;
    position: relative;
}
.edit_info_plus
{
    position: absolute;right: -10px;bottom: 0px;
    color: #2695f9;
    font-size: 30px;
}
.item-title {
    font-size: 22px;
    border-top:none;
    padding-left: 0px;
    font-weight:500;
}
.list-account .item {
    border:none;
    padding-left: 10px;
    padding-right: 10px;
}
.list-change-number .item {
    margin-top:20px;
    border-left: none;
    border-right: none;
    border-bottom-right-radius: 0px !important;
    border-bottom-left-radius: 0px !important;
    text-align: center;
}
.list-change-number input {
    font-size: 18px;
}
.list-change-number number-only-input input{
    text-align: center;
    color: #1294b2 !important;
    font-size:16px !important;
    font-weight: bold;
    border: none;
}
.list-login number-only-input input{
    border: none;
    padding-top: 5px;
    padding-bottom: 5px;
}
.list-delete-number .item{
    border-left: none;
    border-right: none;
    border-bottom-right-radius: 0px !important;
    border-bottom-left-radius: 0px !important;
}
.list-delete-number number-only-input input{
    text-align: center;
    color: #1294b2 !important;
    font-size:16px !important;
    font-weight: bold;
    border: none;
}
.list-exit .item {
    padding: 10px 0px 10px 0px;
}
.list-exit span {
    color:red;
    font-size: 18px;
    font-weight: 500;
}

.list-notifications .item {
    border: none;
    margin-top: -2px;
    margin-left: 10px;
    margin-right: 10px;
    font-size: 16px;
    padding-top: 20px;
    padding-bottom: 20px;
    color:black;
}
.list-feedback-star {
    text-align: center;
    font-size: 35px;
    padding-top: 20px;
    padding-bottom: 20px;
    margin-bottom: 0px;
    width: 100%;
}

.icon-full-star {
    color: #ffe108;
}
.icon-empty-star {
    color: #ebeded;
}
.text-feedback .item{
    border:none;
}
.text-feedback textarea{
    font-size: 18px;
    padding-top: 10px;
}
.list-info {
    margin-bottom: 0px;
}
.list-info .item {
    min-height: 115px !important;
    border-bottom: none;
}
.list-info img {
    max-height: 60px !important;
    max-width: 60px !important;
}
.list-info span {
    padding-left: 70px;
    font-size: 22px;
    font-weight: 400;
    color:black;
}
.list-feed  {
    margin-top: -1px;;
    padding-top: 0px;
    margin-bottom: 5px;
    width: 100%;
}
.list-chat  {
    margin-top: -1px;
    padding-top: 0px;
    margin-bottom: 0px;
}
.list-chat .item-text {
    padding:0px 0px 0px 0px;
    border: none;
}
img.feed-img  {
    max-width: 60px !important;
    max-height: 60px !important;
    min-width: 50px !important;
    min-height: 50px !important;
    width: 100% !important;
    border-radius: 50% !important;
    margin-left: 0px !important;
    display: inline !important;
}
.chat-text-date{
    text-align:right !important;
    font-size:8px;
    line-height:10px;
    width:100%;
    color:#989898;
}
.list-chat .row {
    margin-top:0px;
    margin-bottom:0px !important;
    padding-bottom: 0px;
    padding-top: 0px;
}
.chat-text-name {
    text-align: left;
    padding: 15px 0px 0px 42px !important;
    font-size: 12px;
}
.chat-bubble {
  /*border-radius: 5px;
  padding: 3px 5px 3px 5px;
  font-size: 14px;
  position: relative;
  margin: 10px;
  max-width: 80%;
  display:inline-block;
  background-color: #aaeeaa;
  float: left;
  margin-left: 25px;
  margin-top:0px;
  margin-bottom:0px;
  white-space: normal;
  text-align: left;*/

  border-radius: 10px;
  padding: 5px 8px 5px 8px;
  font-size: 14px;
  position: relative;
  margin: 10px;
  max-width: 80%;
  display: inline-block;
  background-color: #aaeeaa;
  float: left;
  margin-left: 40px;
  margin-top: 0px;
  margin-bottom: 0px;
  white-space: normal;
  text-align: left;
}

.chat-bubble-green:before {
  /*content: "\00a0";
  display: block;
  height: 16px;
  width: 9px;
  position: absolute;
  background-color: #aaeeaa;
  background:url("../img/comment-page-green-bubble-arrow.png") right bottom no-repeat;
  bottom: -7.5px;
    left: 10px;
    -webkit-transform: rotate(70deg) skew(5deg);*/
  content: "";
  display: block;
  height: 11px;
  width: 20px;
  position: absolute;
  background-color: transparent;
  background: url("../img/comment-page-green-bubble-arrow.png") right bottom no-repeat;
  bottom: -10px;
  left: 10px;
  -webkit-transform: none;
  background-size: 100%;
}
.chat-bubble-blue:before {
  /*content: "\00a0";
  display: block;
  height: 16px;
  width: 9px;
  position: absolute;
  background-color: #d1f0f8;
  bottom: -7.5px;
    left: 10px;
    -webkit-transform: rotate(70deg) skew(5deg);*/

  content: "";
  display: block;
  height: 11px;
  width: 20px;
  position: absolute;
  background-color: transparent;
  background: url("../img/blue_arrow.png") right bottom no-repeat;
  bottom: -10px;
  left: 10px;
  -webkit-transform: none;
  background-size: 100%;
}
.chat-bubble-green{
    background-color: #d8f7d8;
}
.chat-bubble-blue{
    background-color: #d1f0f8;
}

.chat-input {
    text-align: left;
    padding-left: 35px !important;
    font-size: 14px;
    border-radius:5px;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border: solid 1px #5d5d5d !important;
    width: 100%;
    padding-left: 5px !important;
    word-spacing:  normal;
}

.comment_input::-webkit-input-placeholder {color: #c7c7cc;}
.comment_input:-moz-placeholder {color: #c7c7cc;}
.comment_input::-moz-placeholder {color: #c7c7cc;}
.comment_input:-ms-input-placeholder {color: #c7c7cc;}
/* ... */

